--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,12 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title:  Ibrahim A. Imam # the website title (if blank, full name will be used instead)
 first_name: Ibrahim 
 middle_name: A.
 last_name: Imam
-contact_note: "Email:imamabiodunibrahim@gmail.com"
-
-description: > 
-  Ph.D. candidate in Chemical Engineering focusing on computational pipelines that fuse molecular mechanics with machine learning for accelerated molecular discovery.
-
+contact_note: "e-mail: imamabiodunibrahim@gmail.com"
+description: Ph.D. candidate in Chemical Engineering focusing on computational pipelines that fuse molecular mechanics with machine learning for accelerated molecular discovery.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
